--- a/src/components/Avatar/Avatar.css
+++ b/src/components/Avatar/Avatar.css
@@ -9,8 +9,8 @@
   justify-content: center;
   width: 64px;
   height: 64px;
-  background: #D9D9D9;
-  color: #000000;
+  background: var(--color-gray-200);
+  color: var(--color-black);
   overflow: hidden;
   flex-shrink: 0;
 }
@@ -36,7 +36,7 @@
   font-size: 20px;
   font-weight: 700;
   line-height: 1;
-  color: #000000;
+  color: var(--color-black);
   letter-spacing: 0.02em;
 }
 
